--- a/readme
+++ b/readme
@@ -1,2 +1,8 @@
-first text and second time
-
+My Project for __Quality Assurance Selenium__ course at Bionic University.  
+_Technologies and Tools:_ 
+- Java
+- Selenium WebDriver
+- Maven
+- TestNG
+- Git
+- Jenkins
